--- a/lokiRouting/src/app/home/home.component.html
+++ b/lokiRouting/src/app/home/home.component.html
@@ -5,3 +5,6 @@
   class="btn btn-primary"
   (click)="loadServers(1)"
 >load Servers 1</button>
+
+<button class="btn btn-success" (click)="onLogin()">Login</button>
+<button class="btn btn-danger" (click)="onLogout()">Logout</button>
