--- a/lokiHttp/src/app/app.component.html
+++ b/lokiHttp/src/app/app.component.html
@@ -49,7 +49,10 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p *ngIf="loading">Loading...</p>
+      <p *ngIf="loading && !errorMsg">Loading...</p>
+      <div class="alert alert-danger" *ngIf="errorMsg">
+        Opps! - {{errorMsg}}
+      </div>
       <p *ngIf="loadedPosts.length<1 && !loading">No posts available!</p>
       <ul
         *ngIf="loadedPosts.length>0 && !loading"
