--- a/lokiHttp/src/app/app.component.html
+++ b/lokiHttp/src/app/app.component.html
@@ -49,9 +49,10 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p *ngIf="loading && !errorMsg">Loading...</p>
-      <div class="alert alert-danger" *ngIf="errorMsg">
-        Opps! - {{errorMsg}}
+      <p *ngIf="loading && !errorResponse">Loading...</p>
+      <div class="alert alert-danger" *ngIf="errorResponse">
+        <strong>Opps! - {{errorResponse.error.error}}</strong>
+        <p>{{errorResponse.message}}</p>
       </div>
       <p *ngIf="loadedPosts.length<1 && !loading">No posts available!</p>
       <ul
