--- a/lokiHttp/src/app/app.component.html
+++ b/lokiHttp/src/app/app.component.html
@@ -50,9 +50,16 @@
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
       <p *ngIf="loading && !errorResponse">Loading...</p>
-      <div class="alert alert-danger" *ngIf="errorResponse">
+      <div
+        class="alert alert-danger"
+        *ngIf="errorResponse"
+      >
         <strong>Opps! - {{errorResponse.error.error}}</strong>
         <p>{{errorResponse.message}}</p>
+        <button
+          class="btn btn-danger"
+          (click)="errorResponse=null"
+        >Close</button>
       </div>
       <p *ngIf="loadedPosts.length<1 && !loading">No posts available!</p>
       <ul
