--- a/lokiAuth/src/app/auth/auth.component.html
+++ b/lokiAuth/src/app/auth/auth.component.html
@@ -1,8 +1,13 @@
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
+    <div class="alert alert-danger" *ngIf="isError">
+      {{isError}}
+    </div>
+    <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
     <form
       #authForm="ngForm"
       (ngSubmit)="onSubmit(authForm)"
+      *ngIf="!isLoading"
     >
       <div class="form-group">
         <label for="email">E-Mail</label>
