--- a/lokiAuth/src/app/header/header.component.html
+++ b/lokiAuth/src/app/header/header.component.html
@@ -8,11 +8,21 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
-        <li routerLinkActive="active"><a routerLink="/auth">Authenticate</a></li>
+        <li
+          routerLinkActive="active"
+          *ngIf="isLogged"
+        ><a routerLink="/recipes">Recipes</a></li>
+        <li
+          routerLinkActive="active"
+          *ngIf="!isLogged"
+        ><a routerLink="/auth">Authenticate</a></li>
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <ul
+        class="nav navbar-nav navbar-right"
+        *ngIf="isLogged"
+      >
+        <li><a style="cursor:pointer">Logout</a></li>
         <li
           class="dropdown"
           appDropdown
